Adding some Array Methods

--- a/sample1_intro.html
+++ b/sample1_intro.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <!-- <input type="text" id="fname" />
-    <button onclick="validate()">Add</button>
-    <h2 id="demo">Hello Javascript .. Welcome to</h2> -->
+    <button onclick="validate()">Add</button>-->
+    <h2 id="demo">Hello Javascript .. Welcome to</h2>
 
     <script>
-      var heading = document.createElement("h1");
-      heading.innerHTML = "Welcome to Dynamic HTML";
-      document.body.appendChild(heading);
+      // var heading = document.createElement("h1");
+      // heading.innerHTML = "Welcome to Dynamic HTML";
+      // document.body.appendChild(heading);
       //   function validate() {
       //     var val = document.getElementById("fname").value;
       //     if (val == "") {
@@ -28,8 +28,8 @@
       //   document.getElementById("demo").setAttribute("class", "success");
       //   document.getElementById("demo").style.background = "grey";
       //   var city = prompt("Please Enter City Name");
-      //   document.getElementById("demo").innerHTML =
-      //     "Hello Javascript .. Welcome to " + city;
+      document.getElementById("demo").innerHTML =
+        "Hello Javascript .. Welcome to " + city;
     </script>
   </body>
 </html>
