--- a/sample3_variables.html
+++ b/sample3_variables.html
@@ -15,16 +15,16 @@
       var qty = null;
       var items;
 
-      //   console.log(typeof xyz);
-      //   console.log(typeof myName);
-      //   console.log(typeof ans);
-      //   console.log(typeof qty);
-      //   console.log(items);
+      console.log(typeof xyz);
+      console.log(typeof myName);
+      console.log(typeof ans);
+      console.log(typeof qty);
+      console.log(items);
 
-      //   alert(myName);
-      //   console.log(myName);
-      //   document.write(myName);
-      //   document.getElementById("demo").innerHTML = myName;
+      alert(myName);
+      console.log(myName);
+      document.write(myName);
+      document.getElementById("demo").innerHTML = myName;
     </script>
   </body>
 </html>
