--- a/sample4_alertBoxes.html
+++ b/sample4_alertBoxes.html
@@ -4,11 +4,14 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="DisplayName"></div>
     <script>
-      //   alert("welcome To JS");
-      //   var myName = prompt("Please enter Your Name");
-      //   alert("Welcome " + myName);
-      //   confirm("Do you want to Close this Page ?");
+      // alert("welcome To JS");
+      var myName = prompt("Please enter Your Name");
+      // alert("Welcome " + myName);
+      // confirm("Do you want to Close this Page ?");
+      // document.write("welcome" + myName);
+      document.getElementById("DisplayName").innerHTML = myName;
     </script>
   </body>
 </html>
