Displaying captrured records

--- a/sample13_form_Values.html
+++ b/sample13_form_Values.html
@@ -13,9 +13,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
           <form>
             <div class="form-group">
               <label for="fname">First Name</label>
@@ -103,7 +100,16 @@
           </form>
         </div>
         <div class="col-sm">
-          One of three columns
+          <h5>Captured Details</h5>
+          <table class="table">
+            <thead>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Email</th>
+              <th>Gender</th>
+            </thead>
+            <tbody id="myTable"></tbody>
+          </table>
         </div>
       </div>
     </div>
