Adding Edit and Delete Buttons

--- a/sample13_form_Values.html
+++ b/sample13_form_Values.html
@@ -107,6 +107,8 @@
               <th>Last Name</th>
               <th>Email</th>
               <th>Gender</th>
+              <!-- <th>Edit</th>
+              <th>Delete</th> -->
             </thead>
             <tbody id="myTable"></tbody>
           </table>
