--- a/sample13_form_Values.html
+++ b/sample13_form_Values.html
@@ -97,6 +97,10 @@
             <button type="button" class="btn btn-primary" onclick="getData()">
               Submit
             </button>
+
+            <button type="button" class="btn btn-primary" onclick="updateUser()">
+              Update
+            </button>
           </form>
         </div>
         <div class="col-sm">
